namespace EmployeeManagementSystem;

public class Employee
{
  public string Name { get; set; }
  public EmployeeType Type { get; set; }
  public decimal BaseSalary { get; set; }
  public decimal Bonus { get; set; }
}