namespace EmployeeManagementSystem;

public enum EmployeeType
{
  FullTime,
  PartTime,
  Contractor
}