namespace EmployeeManagementSystem;

public interface ISalaryCalculator
{
  decimal CalculateSalary(Employee employee);
}