namespace EmployeeManagementSystem;

public interface INotifier
{
  void Notify(string message);
}